# dynamic-optimization-cdn

./: CLAUDE.md  README.md
.serena/: project.yml
api-gateway/: README.md  build-sharp-layer.sh  dynamic-image-transformation-for-amazon-cloudfront.template  package-lock.json  package.json  tsconfig.json
api-gateway/cdk/: cdk.json  package-lock.json  package.json
api-gateway/cdk/lib/: api-gateway-stack.ts
api-gateway/cdk/test/: api-gateway.test.ts
api-gateway/cloudfront-functions/: request-modifier.js
api-gateway/demo-ui/: index.html
api-gateway/lambda-layers/sharp-layer/nodejs/: package-lock.json  package.json
api-gateway/lambda/image-transform/: .dockerignore  Dockerfile  package-lock.json  package.json  tsconfig.json
api-gateway/lambda/image-transform/src/: aws-clients.ts  config.ts  image-processor.ts  index.ts  logger.ts  request-parser.ts  response-builder.ts  signature-validator.ts  types.ts  validators.ts
api-gateway/lib/: api-gateway-stack.ts
api-gateway/sample-images/: .gitkeep  README.md
s3-object-lambda/: README.md
s3-object-lambda/cdk/: package-lock.json
s3-object-lambda/cdk/lib/: cdk-stack.ts  s3-object-lambda-stack.ts
s3-object-lambda/cloudfront-functions/: request-modifier.js
s3-object-lambda/demo-ui/: index.html
s3-object-lambda/lambda/: Dockerfile  README.md  aws_clients.py  config.py  index.py  logger.py  models.py  pyproject.toml  quality_optimizer.py  signature_validator.py  validators.py
s3-object-lambda/sample-images/: README.md
